# mesg_agent

./: .gitignore  README.md  README.zh-CN.md  config-example.yaml  main.py  pyproject.toml
core/: feishu_handler.py  feishu_messenger.py  feishu_ws_client.py  llm.py  message.py  webhook_server.py
doc/feishu/: feishu_integration_architecture.md  implement_stage.md
tests/: test_feishu_handler.py  test_feishu_messenger.py  test_message.py
